--- a/src/TracExplorer.Common/Properties/Resources.resx
+++ b/src/TracExplorer.Common/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="server_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server_new.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CaptionEditServer" xml:space="preserve">
+    <value>Edit Trac Server</value>
+  </data>
 </root>
