fixed #61: Added possibility to change query in the ticket view control

--- a/src/TracExplorer.Common/TicketView.resx
+++ b/src/TracExplorer.Common/TicketView.resx
@@ -139,6 +139,66 @@
   <metadata name="colSelection.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="colIcon.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colTicketType.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSummary.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colReporter.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colResolution.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colComponent.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colPriority.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colKeywords.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colVersion.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colMilestone.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colOwner.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSeverity.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colCC.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colCreated.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colLastModified.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSelection.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="selectionBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="selectionBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -213,44 +273,44 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
         CwAAAk1TRnQBSQFMAgEBAwEAAQQBAAEEAQABDAEAAQwBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAEw
-        AwABDAMAAQEBAAEgBgABCYYAAS4BlQEnAf8BBAFkAQQB/0QAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
+        AwABDAMAAQEBAAEgBgABCYYAATABlQEpAf8BBgFmAQYB/0QAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
         AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHE
         Ad8B/wQAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHf
         Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wQAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
-        AYoBxAHfAf8BigHEAd8B/wEuAZUBJwH/AQQBgQEEAf8BBAFkAQQB/wGKAcQB3wH/AYoBxAHfAf8BigHE
+        AYoBxAHfAf8BigHEAd8B/wEwAZUBKQH/AQYBgQEGAf8BBgFmAQYB/wGKAcQB3wH/AYoBxAHfAf8BigHE
         Ad8B/zQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGF
         AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
-        Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BLgGVAScB/wEE
-        AYEBBAH/AQQBZAEEAf8BBAGBAQQB/wEEAWQBBAH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/MAABigHE
-        Ad8B/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/
-        AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/BAABigHEAd8B/wGFAfUB+QH/AwQB/wMEAf8DBAH/AwQB/wME
-        Af8DBAH/AwQB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/
-        AS4BlQEnAf8BBAFkAQQB/wFBAaABywH/AS4BlQEnAf8BBAGBAQQB/wEEAWQBBAH/AYUB9QH5Af80AAGK
+        Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BMAGVASkB/wEG
+        AYEBBgH/AQYBZgEGAf8BBgGBAQYB/wEGAWYBBgH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/MAABigHE
+        Ad8B/wGFAfUB+QH/AUMBoAHLAf8BQwGgAcsB/wFDAaABywH/AUMBoAHLAf8BQwGgAcsB/wFDAaABywH/
+        AUMBoAHLAf8BhQH1AfkB/wGFAfUB+QH/BAABigHEAd8B/wGFAfUB+QH/AwYB/wMGAf8DBgH/AwYB/wMG
+        Af8DBgH/AwYB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BQwGgAcsB/wFDAaABywH/
+        ATABlQEpAf8BBgFmAQYB/wFDAaABywH/ATABlQEpAf8BBgGBAQYB/wEGAWYBBgH/AYUB9QH5Af80AAGK
         AcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
-        Af8BhQH1AfkB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AXcB5QHw
-        Af8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wEuAZUBJwH/AQQBgQEEAf8BBAFkAQQB/wGF
-        AfUB+QH/AYUB9QH5Af8BLgGVAScB/wEEAYEBBAH/AQQBZAEEAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1
-        AfkB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
-        AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wEEAWQBBAH/AQQBZAEEAf8BBAFkAQQB/wEE
-        AWQBBAH/AQQBZAEEAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1
-        AfkB/wFBAaABywH/AS4BlQEnAf8BLgGVAScB/wFBAaABywH/AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
-        AS4BlQEnAf8BBAGBAQQB/wEEAWQBBAH/MAABigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF3AeUB8AH/AYoBxAHf
+        Af8BhQH1AfkB/wGFAfUB+QH/AXkB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGF
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AXkB5QHw
+        Af8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wEwAZUBKQH/AQYBgQEGAf8BBgFmAQYB/wGF
+        AfUB+QH/AYUB9QH5Af8BMAGVASkB/wEGAYEBBgH/AQYBZgEGAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1
+        AfkB/wFDAaABywH/AUMBoAHLAf8BQwGgAcsB/wFDAaABywH/AUMBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
+        AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wEGAWYBBgH/AQYBZgEGAf8BBgFmAQYB/wEG
+        AWYBBgH/AQYBZgEGAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1
+        AfkB/wFDAaABywH/ATABlQEpAf8BMAGVASkB/wFDAaABywH/AUMBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
+        ATABlQEpAf8BBgGBAQYB/wEGAWYBBgH/MAABigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF5AeUB8AH/AYoBxAHf
         Af8BigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF3AeUB8AH/AYoBxAHfAf8BigHEAd8B/wGFAfUB+QH/AYUB9QH5
-        Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wEu
-        AZUBJwH/AYoBxAHfAf8wAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF5AeUB8AH/AYoBxAHfAf8BigHEAd8B/wGFAfUB+QH/AYUB9QH5
+        Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wEw
+        AZUBKQH/AYoBxAHfAf8wAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
         AfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af80AAGKAcQB3wH/AYUB9QH5
-        Af8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wGF
-        AfUB+QH/AXcB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/AUEBoAHL
-        Af8BQQGgAcsB/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/wGK
-        AcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AUEBoAHL
-        Af8BQQGgAcsB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
+        Af8BQwGgAcsB/wFDAaABywH/AUMBoAHLAf8BQwGgAcsB/wGFAfUB+QH/AUMBoAHLAf8BQwGgAcsB/wGF
+        AfUB+QH/AXkB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BQwGgAcsB/wFDAaABywH/AUMBoAHL
+        Af8BQwGgAcsB/wGFAfUB+QH/AUMBoAHLAf8BQwGgAcsB/wGFAfUB+QH/AXkB5QHwAf8BigHEAd8B/wGK
+        AcQB3wH/AYUB9QH5Af8BQwGgAcsB/wFDAaABywH/AUMBoAHLAf8BQwGgAcsB/wGFAfUB+QH/AUMBoAHL
+        Af8BQwGgAcsB/wGFAfUB+QH/AXkB5QHwAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
         AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
